--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "*.js"
   ],
   "dependencies": {
-    "fs-extra": "^4.0.0",
+    "fs-extra": "^4.0.1",
     "glob": "^7.1.2",
     "imagemin": "^5.3.1",
     "jimp": "^0.2.28",
     "merge-options": "^1.0.0",
     "ora": "^1.3.0",
-    "yaku": "^0.18.2"
+    "yaku": "^0.18.2",
+    "handle-that": "^0.1.0"
   },
   "devDependencies": {
     "coffeescript": "^2.0.0-beta3",
