--- a/package.json
+++ b/package.json
@@ -18,24 +18,28 @@
   "engines": {
     "node": "*"
   },
-  "main": "chew-away.js",
+  "main": "_chew-away.js",
   "files": [
     "lib/",
     "*.js"
   ],
   "dependencies": {
+    "chalk": "^2.1.0",
     "fs-extra": "^4.0.1",
     "glob": "^7.1.2",
+    "handle-that": "^0.1.2",
     "imagemin": "^5.3.1",
+    "is-plain-object": "^2.0.4",
     "jimp": "^0.2.28",
     "merge-options": "^1.0.0",
     "ora": "^1.3.0",
-    "yaku": "^0.18.2",
-    "handle-that": "^0.1.0"
+    "tinygradient": "^0.3.1",
+    "yaku": "^0.18.2"
   },
   "devDependencies": {
     "coffeescript": "^2.0.0-beta3",
-    "imagemin-guetzli": "^1.0.0"
+    "imagemin-guetzli": "^1.0.0",
+    "imagemin-webp": "^4.0.0"
   },
   "keywords": [
     "imagemin",
