--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "*.js"
   ],
   "dependencies": {
-    "chalk": "^2.1.0",
-    "fs-extra": "^4.0.1",
+    "chalk": "^2.3.0",
+    "fs-extra": "^4.0.2",
     "glob": "^7.1.2",
     "handle-that": "^0.1.3",
     "imagemin": "^5.3.1",
@@ -33,11 +33,12 @@
     "jimp": "^0.2.28",
     "merge-options": "^1.0.0",
     "ora": "^1.3.0",
+    "read-conf": "^0.3.1",
     "tinygradient": "^0.3.1",
-    "yaku": "^0.18.2"
+    "yaku": "^0.18.4"
   },
   "devDependencies": {
-    "coffeescript": "^2.0.0-beta3",
+    "coffeescript": "^2.0.2",
     "imagemin-guetzli": "^1.0.0",
     "imagemin-webp": "^4.0.0"
   },
